-
Bug
-
Resolution: Fixed
-
P2
-
8, jfx14
-
x86_64
-
os_x_10.15
Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
---|---|---|---|---|---|---|
JDK-8249708 | jfx14 | Alexander Matveev | P2 | Resolved | Fixed | |
JDK-8240207 | 8u261 | Alexander Matveev | P2 | Closed | Fixed | b01 |
JDK-8241777 | 8u251 | Alexander Matveev | P2 | Resolved | Fixed | b31 |
JDK-8240326 | 8u241 | Alexander Matveev | P2 | Closed | Fixed | b33 |
JDK-8247259 | jfx11.0.8 | Alexander Matveev | P2 | Resolved | Fixed |
ADDITIONAL SYSTEM INFORMATION :
1.8.0_221 and OSX Catalina
A DESCRIPTION OF THE PROBLEM :
The JavaFx application hangs on video play on OSX Catalina. Runs successfully on HighSiera and Mojave.
REGRESSION : Last worked in version 8u231
FREQUENCY : always
1.8.0_221 and OSX Catalina
A DESCRIPTION OF THE PROBLEM :
The JavaFx application hangs on video play on OSX Catalina. Runs successfully on HighSiera and Mojave.
REGRESSION : Last worked in version 8u231
FREQUENCY : always
- backported by
-
JDK-8241777 [macos 10.15] JavaFX Application hangs on video play on Catalina
-
- Resolved
-
-
JDK-8247259 [macos 10.15] JavaFX Application hangs on video play on Catalina
-
- Resolved
-
-
JDK-8249708 [macos 10.15] JavaFX Application hangs on video play on Catalina
-
- Resolved
-
-
JDK-8240207 [macos 10.15] JavaFX Application hangs on video play on Catalina
-
- Closed
-
-
JDK-8240326 [macos 10.15] JavaFX Application hangs on video play on Catalina
-
- Closed
-
- is cloned by
-
JDK-8240694 [macos 10.15] JavaFX Media hangs on some video files on Catalina
-
- Resolved
-
(1 is cloned by, 2 links to)