8236832: [macos 10.15] JavaFX Application hangs on video play on Catalina